manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms1-web-app-svc
  namespace: ms1-webhosting
spec:
  selector:
    app: ms1-web-app
  ports:
  - port: 80
    targetPort: 5678
  type: ClusterIP
